src/ir/tests/snapshots/fern__ir__tests__lower__typed_conversions.snap
---
source: src/ir.rs
expression: program.program()
---
Program {
    globals: [],
    functions: [
        Function {
            parameters: 0,
            result: None,
            values: [
                Value {
                    span: None,
                    ty: Scalar(
                        I8,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                0,
                            ),
                        ),
                    ),
                },
                Value {
                    span: Some(
                        70..80,
                    ),
                    ty: Scalar(
                        I16,
                    ),
                    kind: Convert {
                        operand: Value(
                            ValueId(
                                0,
                            ),
                        ),
                        truncating: false,
                    },
                },
                Value {
                    span: None,
                    ty: Scalar(
                        I16,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                1,
                            ),
                        ),
                    ),
                },
                Value {
                    span: Some(
                        109..120,
                    ),
                    ty: Scalar(
                        I64,
                    ),
                    kind: Convert {
                        operand: Value(
                            ValueId(
                                2,
                            ),
                        ),
                        truncating: false,
                    },
                },
                Value {
                    span: None,
                    ty: Scalar(
                        U8,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                3,
                            ),
                        ),
                    ),
                },
                Value {
                    span: Some(
                        182..195,
                    ),
                    ty: Scalar(
                        U64,
                    ),
                    kind: Convert {
                        operand: Value(
                            ValueId(
                                4,
                            ),
                        ),
                        truncating: false,
                    },
                },
                Value {
                    span: None,
                    ty: Scalar(
                        Int,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                5,
                            ),
                        ),
                    ),
                },
                Value {
                    span: Some(
                        226..237,
                    ),
                    ty: Scalar(
                        I32,
                    ),
                    kind: Convert {
                        operand: Value(
                            ValueId(
                                6,
                            ),
                        ),
                        truncating: false,
                    },
                },
                Value {
                    span: None,
                    ty: Scalar(
                        I32,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                6,
                            ),
                        ),
                    ),
                },
                Value {
                    span: Some(
                        266..276,
                    ),
                    ty: Scalar(
                        Int,
                    ),
                    kind: Convert {
                        operand: Value(
                            ValueId(
                                8,
                            ),
                        ),
                        truncating: false,
                    },
                },
                Value {
                    span: None,
                    ty: Scalar(
                        Uint,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                8,
                            ),
                        ),
                    ),
                },
                Value {
                    span: Some(
                        321..327,
                    ),
                    ty: Scalar(
                        U32,
                    ),
                    kind: Convert {
                        operand: Value(
                            ValueId(
                                10,
                            ),
                        ),
                        truncating: false,
                    },
                },
                Value {
                    span: None,
                    ty: Scalar(
                        U32,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                9,
                            ),
                        ),
                    ),
                },
                Value {
                    span: Some(
                        338..346,
                    ),
                    ty: Scalar(
                        Uint,
                    ),
                    kind: Convert {
                        operand: Value(
                            ValueId(
                                12,
                            ),
                        ),
                        truncating: false,
                    },
                },
                Value {
                    span: None,
                    ty: Scalar(
                        I8,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                0,
                            ),
                        ),
                    ),
                },
                Value {
                    span: Some(
                        369..379,
                    ),
                    ty: Scalar(
                        Int,
                    ),
                    kind: Convert {
                        operand: Value(
                            ValueId(
                                14,
                            ),
                        ),
                        truncating: false,
                    },
                },
            ],
            flow: ControlFlow {
                entry: BlockId(
                    0,
                ),
                locals: [
                    Scalar(
                        I8,
                    ),
                    Scalar(
                        I16,
                    ),
                    Scalar(
                        I64,
                    ),
                    Scalar(
                        U8,
                    ),
                    Scalar(
                        U64,
                    ),
                    Scalar(
                        Int,
                    ),
                    Scalar(
                        I32,
                    ),
                    Scalar(
                        Int,
                    ),
                    Scalar(
                        Uint,
                    ),
                    Scalar(
                        U32,
                    ),
                    Scalar(
                        Uint,
                    ),
                ],
                blocks: [
                    Block {
                        instructions: [
                            Store {
                                place: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                operand: Integer {
                                    value: 42,
                                    ty: I8,
                                },
                            },
                            Value(
                                ValueId(
                                    0,
                                ),
                            ),
                            Value(
                                ValueId(
                                    1,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        1,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        1,
                                    ),
                                ),
                            },
                            Value(
                                ValueId(
                                    2,
                                ),
                            ),
                            Value(
                                ValueId(
                                    3,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        2,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        3,
                                    ),
                                ),
                            },
                            Store {
                                place: Local(
                                    LocalId(
                                        3,
                                    ),
                                ),
                                operand: Integer {
                                    value: 255,
                                    ty: U8,
                                },
                            },
                            Value(
                                ValueId(
                                    4,
                                ),
                            ),
                            Value(
                                ValueId(
                                    5,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        4,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        5,
                                    ),
                                ),
                            },
                            Store {
                                place: Local(
                                    LocalId(
                                        5,
                                    ),
                                ),
                                operand: Integer {
                                    value: 42,
                                    ty: Int,
                                },
                            },
                            Value(
                                ValueId(
                                    6,
                                ),
                            ),
                            Value(
                                ValueId(
                                    7,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        6,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        7,
                                    ),
                                ),
                            },
                            Value(
                                ValueId(
                                    8,
                                ),
                            ),
                            Value(
                                ValueId(
                                    9,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        7,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        9,
                                    ),
                                ),
                            },
                            Store {
                                place: Local(
                                    LocalId(
                                        8,
                                    ),
                                ),
                                operand: Integer {
                                    value: 42,
                                    ty: Uint,
                                },
                            },
                            Value(
                                ValueId(
                                    10,
                                ),
                            ),
                            Value(
                                ValueId(
                                    11,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        9,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        11,
                                    ),
                                ),
                            },
                            Value(
                                ValueId(
                                    12,
                                ),
                            ),
                            Value(
                                ValueId(
                                    13,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        10,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        13,
                                    ),
                                ),
                            },
                            Value(
                                ValueId(
                                    14,
                                ),
                            ),
                            Value(
                                ValueId(
                                    15,
                                ),
                            ),
                        ],
                        terminator: Exit {
                            status: Value(
                                ValueId(
                                    15,
                                ),
                            ),
                        },
                    },
                ],
            },
        },
    ],
    main: FunctionId(
        0,
    ),
}
