src/ir/tests/snapshots/fern__ir__tests__lower__typed_scopes.snap
---
source: src/ir/tests/lower.rs
expression: program.program()
---
Program {
    structs: [],
    globals: [],
    functions: [
        Function {
            parameters: 0,
            result: None,
            values: [
                Value {
                    span: None,
                    ty: Scalar(
                        I8,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                0,
                            ),
                        ),
                    ),
                },
                Value {
                    span: None,
                    ty: Scalar(
                        I8,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                0,
                            ),
                        ),
                    ),
                },
                Value {
                    span: Some(
                        96..102,
                    ),
                    ty: Scalar(
                        I64,
                    ),
                    kind: Convert {
                        operand: Value(
                            ValueId(
                                1,
                            ),
                        ),
                        truncating: false,
                    },
                },
                Value {
                    span: None,
                    ty: Scalar(
                        I8,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                1,
                            ),
                        ),
                    ),
                },
                Value {
                    span: Some(
                        108..118,
                    ),
                    ty: Scalar(
                        I64,
                    ),
                    kind: Convert {
                        operand: Value(
                            ValueId(
                                3,
                            ),
                        ),
                        truncating: false,
                    },
                },
                Value {
                    span: None,
                    ty: Scalar(
                        I64,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                2,
                            ),
                        ),
                    ),
                },
                Value {
                    span: None,
                    ty: Scalar(
                        I8,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                0,
                            ),
                        ),
                    ),
                },
                Value {
                    span: Some(
                        174..180,
                    ),
                    ty: Scalar(
                        Int,
                    ),
                    kind: Convert {
                        operand: Value(
                            ValueId(
                                6,
                            ),
                        ),
                        truncating: false,
                    },
                },
                Value {
                    span: None,
                    ty: Scalar(
                        I8,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                1,
                            ),
                        ),
                    ),
                },
                Value {
                    span: Some(
                        191..201,
                    ),
                    ty: Scalar(
                        Int,
                    ),
                    kind: Convert {
                        operand: Value(
                            ValueId(
                                8,
                            ),
                        ),
                        truncating: false,
                    },
                },
                Value {
                    span: None,
                    ty: Scalar(
                        I8,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                1,
                            ),
                        ),
                    ),
                },
                Value {
                    span: None,
                    ty: Scalar(
                        I8,
                    ),
                    kind: Load(
                        Local(
                            LocalId(
                                5,
                            ),
                        ),
                    ),
                },
                Value {
                    span: Some(
                        248..259,
                    ),
                    ty: Scalar(
                        Int,
                    ),
                    kind: Convert {
                        operand: Value(
                            ValueId(
                                11,
                            ),
                        ),
                        truncating: false,
                    },
                },
            ],
            flow: ControlFlow {
                entry: BlockId(
                    0,
                ),
                locals: [
                    Scalar(
                        I8,
                    ),
                    Scalar(
                        I8,
                    ),
                    Scalar(
                        I64,
                    ),
                    Scalar(
                        I64,
                    ),
                    Scalar(
                        Int,
                    ),
                    Scalar(
                        I8,
                    ),
                ],
                blocks: [
                    Block {
                        instructions: [
                            Store {
                                place: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                operand: Literal(
                                    Integer {
                                        value: 42,
                                        ty: I8,
                                    },
                                ),
                            },
                            Value(
                                ValueId(
                                    0,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        1,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        0,
                                    ),
                                ),
                            },
                            Value(
                                ValueId(
                                    1,
                                ),
                            ),
                            Value(
                                ValueId(
                                    2,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        2,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        2,
                                    ),
                                ),
                            },
                            Value(
                                ValueId(
                                    3,
                                ),
                            ),
                            Value(
                                ValueId(
                                    4,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        2,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        4,
                                    ),
                                ),
                            },
                            Value(
                                ValueId(
                                    5,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        3,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        5,
                                    ),
                                ),
                            },
                            Store {
                                place: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                operand: Literal(
                                    Integer {
                                        value: 7,
                                        ty: I8,
                                    },
                                ),
                            },
                            Value(
                                ValueId(
                                    6,
                                ),
                            ),
                            Value(
                                ValueId(
                                    7,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        4,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        7,
                                    ),
                                ),
                            },
                            Value(
                                ValueId(
                                    8,
                                ),
                            ),
                            Value(
                                ValueId(
                                    9,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        4,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        9,
                                    ),
                                ),
                            },
                            Value(
                                ValueId(
                                    10,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        5,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        10,
                                    ),
                                ),
                            },
                            Value(
                                ValueId(
                                    11,
                                ),
                            ),
                            Value(
                                ValueId(
                                    12,
                                ),
                            ),
                        ],
                        terminator: Exit {
                            status: Value(
                                ValueId(
                                    12,
                                ),
                            ),
                        },
                    },
                ],
            },
        },
    ],
    main: FunctionId(
        0,
    ),
}
